--- a/src/main/resources/static/from.html
+++ b/src/main/resources/static/from.html
@@ -19,8 +19,12 @@
                 <form>
                     <div class="col-auto">
                         <div class="form-group">
-                            <input type="file" class="file" id="file" @change="upload"/>
+                            <input type="file" class="file" class="form-control-file" id="file" @change="upload"/>
+                            <label for="file">{{msg}}</label>
                         </div>
+                    </div>
+                    <div class="alert alert-danger" role="alert">
+                        本虫洞讲武德, 不会保存数据, 而且传输是一次性的
                     </div>
                     <hr/>
                     <div class="col-auto">
@@ -37,7 +41,7 @@
                             <div class="input-group-prepend">
                                 <div class="input-group-text">下载码</div>
                             </div>
-                            <input type="text" class="form-control" v-model="downloadCode">
+                            <input type="text" class="form-control" v-model="downloadCode" @input="refreshData()"/>
                             <input type="button" class="btn btn-sm btn-outline-info" value="copy" @click="copy(downloadCode)">
                         </div>
                     </div>
@@ -53,7 +57,7 @@
                 </form>
             </div>
             <div class="mx-auto">
-            <div id="qrcode"></div>
+                <div id="qrcode"></div>
             </div>
         </div>
     </div>
@@ -69,21 +73,26 @@ var app = new Vue({
     downloadCode: "",
     downloadUrl: "",
     whiteholeUrl: window.location.origin + "/whitehole",
+    qrcode: null,
+    msg: "",
   },
   created: function () {
   },
   mounted: function () {
+    this.downloadCode = randNumber();
+    this.qrcode = new QRCode(document.getElementById("qrcode"), {
+        width : 200,
+        height : 200
+      });
     this.refreshData();
   },
   methods: {
     refreshData() {
-      this.downloadCode = randNumber();
       this.downloadUrl = window.location.origin + "/whitehole/" + this.downloadCode
-      var qrcode = new QRCode(document.getElementById("qrcode"), {
-        width : 200,
-        height : 200
-      });
-      qrcode.makeCode(this.downloadUrl);
+      if (this.qrcode) {
+        this.qrcode.clear();
+      }
+      this.qrcode.makeCode(this.downloadUrl);
     },
     upload(e) {
       let param = new FormData();
@@ -92,8 +101,15 @@ var app = new Vue({
          headers:{'Content-Type':'multipart/form-data'}
       };
       this.$http.post('/blackhole/' + this.downloadCode, param, config)
-        .then(response=>{
+        .then(response => {
           console.log(response.data);
+          this.msg = response.data.msg;
+          if (response.data.code != 0) {
+            this.downloadCode = randNumber();
+            this.refreshData();
+          }
+        }, error => {
+          console.log(error);
         })
     },
     copy(e) {
